[package]
name = "actix-thread"
version = "0.1.0"
authors = ["allmywatts <allmywatts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.7"
crossbeam = "0.7"
ctrlc = "3.1.5"